deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  namespace: guacamole
  labels:
    app: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole 
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      containers:
        - image: guacamole/guacamole
          name: guacamole
          ports:
            - containerPort: 8080
              name: guacamole-http
      volumes:
            - name: guacamole-sql
              persistentVolumeClaim:
                claimName: guacamole-pv-claim

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  namespace: guacamole
  labels:
    app: guacd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacd
  template:
    metadata:
      labels: 
       app: guacd
    spec:
      containers:
        - name: guacd
          image: guacamole/guacd 
          ports:
           - containerPort: 4822
             name: guacd
