service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-svc
  namespace: guacamole
  labels:
    app: guacamole
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: guacamole
  selector:
    app: guacamole

---

apiVersion: v1
kind: Service
metadata:
  name: guacd-svc
  namespace: guacamole
  labels:
    app: guaccd
spec:
  type: ClusterIP
  ports:
    - port: 4822
      targetPort: 4822
      name: guacd
  selector:
    app: guacd
