ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole-ingress 
  namespace: guacamole
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: guacamole.encrypted.my 
    http:
       paths:
        - path: /
          pathType: Prefix
          backend:
           service:
            name: guacamole-svc
            port:
              number: 8080

  tls:
    - hosts:
      - guacamole.encrypted.my
      secretName: letsencrypt-prod
